packages/slate-schema/test/validations/next/valid.js
/** @jsx jsx */

import { jsx } from 'slate-hyperscript'

export const schema = [
  {
    for: 'node',
    match: { a: true },
    validate: {
      next: [{ b: true }],
    },
  },
]

export const input = (
  <value>
    <element a>one</element>
    <element b>two</element>
    <element c>three</element>
  </value>
)

export const output = input
